deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interns-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: interns-demo
  template:
    metadata:
      labels:
        app: interns-demo
    spec:
      containers:
        - name: interns-demo
          image: quay.io/pb82/interns-demo:latest
          ports:
            - containerPort: 3000
---
kind: Service
apiVersion: v1
metadata:
  name: interns-demo
  namespace: interns-demo
spec:
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
  selector:
    app: interns-demo
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: interns-demo
  namespace: interns-demo
spec:
  host: interns-demo-interns-demo.apps-crc.testing
  to:
    kind: Service
    name: interns-demo
  port:
    targetPort: 3000
  wildcardPolicy: None
