route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: interns-demo
  namespace: interns-demo
spec:
  to:
    kind: Service
    name: interns-demo
  port:
    targetPort: http
  wildcardPolicy: None
